--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -1,5 +1,5 @@
 cluster:
-  name: "nodejs-example23234Lf"
+  name: "nodejs-example2323412be"
   provider: "google"
   google_project: "gabo-project"
   google_node_count: 2
