--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -4,6 +4,7 @@ cluster:
   google_project: "gabo-project"
   google_node_count: 2
   google_gke_version: "1.9.6-gke.1"
+  secret_id: "444a6010-a6a5-4510-a465-e9d2719887af"
 
 # generic Banzai Cloud `spotguide` for a nodejs application
 pipeline:
