--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -5,7 +5,7 @@ cluster:
 
 # generic Banzai Cloud `spotguide` for a nodejs application
 pipeline:
-# this step builds and uploads the application image to the image registry (docker)
+# this step builds and uploads the application image to the image registry
   build_container:
     image: plugins/docker
     dockerfile: Dockerfile
