--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -10,6 +10,6 @@ pipeline:
     image: plugins/docker
     dockerfile: Dockerfile
     repo: banzaicloud/nodejs-example
-    tags: "{{ printf \"dev-%s\" (.DRONE_COMMIT_SHA | trunc 7) }}"
+    tags: "{{ printf \"test-%s\" (.DRONE_COMMIT_SHA | trunc 7) }}"
     log: debug
     pull: true
