--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -7,17 +7,23 @@ pipeline:
   print_env:
     image: golang:1.10-alpine
     commands:
+    - pwd
     - env
+    - sleep 30
     group: build
 
   print_env2:
     image: golang:1.10-alpine
     commands:
+    - pwd
     - env
+    - sleep 30
     group: build
 
   print_env3:
     image: golang:1.10-alpine
     commands:
+    - pwd
     - env
+    - sleep 30
     group: build
