--- a/.pipeline.yml
+++ b/.pipeline.yml
@@ -1,7 +1,7 @@
 cluster:
   name: "drone-nodejs-example-google-6"
   provider: "google"
-  secret_id: "c4305cbe-3664-417c-ab7a-e53e102a39a4"
+  # secret_id: "2a8c714c-dfa3-4e77-944d-c217bde89f3b"
 
 pipeline:
   print_env:
